fixed news card not centered

--- a/public/css/conflictProfile.css
+++ b/public/css/conflictProfile.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Verdana, sans-serif;
-  background-color: #CFDBD5;
+  background-color: #cfdbd5;
 }
 
 .relatedNewsContainer {
@@ -13,8 +13,9 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   position: relative;
+  align-items: center;
 }
 
 .container {
@@ -25,10 +26,11 @@ body {
   margin: 50px;
   padding: 25px 16px;
   line-height: 30px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #E8EDDF;
+  background-color: #e8eddf;
 }
 
 .later {
@@ -66,6 +68,7 @@ body {
   justify-content: center;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
+  position: sticky;
 }
 
 .bookmark:hover {
@@ -75,7 +78,12 @@ body {
 
 @media only screen and (min-width: 500px) {
   #relatedNewsContainer {
-    flex-direction: row;
+    flex-direction: column;
     position: relative;
+  }
+  .container {
+    flex-direction: column;
+    position: relative;
+    text-align: center;
   }
 }
